<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/buttonExplicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button_explicit"
        app:layout_constraintEnd_toStartOf="@+id/buttonImplicit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonImplicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_implicit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonExplicit"
        app:layout_constraintTop_toTopOf="@+id/buttonExplicit" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distText"
        app:layout_constraintTop_toTopOf="@+id/distText" />

    <Button
        android:id="@+id/buttonLaunch"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/button_launch"
        app:layout_constraintStart_toStartOf="@+id/buttonSend"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/distText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExplicit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Result:"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonLaunch"
        app:layout_constraintStart_toStartOf="@+id/distText"
        app:layout_constraintTop_toBottomOf="@+id/distText" />

</androidx.constraintlayout.widget.ConstraintLayout>